force-app/main/default/objects/msf_task_gdpr_h__x/msf_task_gdpr_h__x.object-meta.xml
<CustomObject>
    <description>msf_task_gdpr_h</description>
    <externalDataSource>AWS</externalDataSource>
    <externalName>msf_task_gdpr_h</externalName>
    <label>msf_task_gdpr_h</label>
    <pluralLabel>msf_task_gdpr_h</pluralLabel>
</CustomObject>