force-app/main/default/objects/msf_task_gdpr_h__x/fields/c1__c.field-meta.xml
<CustomField>
    <fullName>c1__c</fullName>
    <description>c1</description>
    <externalDeveloperName>c1</externalDeveloperName>
    <label>c1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>