force-app/main/default/objects/msf_task_gdpr_h__x/fields/c2__c.field-meta.xml
<CustomField>
    <fullName>c2__c</fullName>
    <description>c2</description>
    <externalDeveloperName>c2</externalDeveloperName>
    <label>c2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>