force-app/main/default/objects/msf_task_gdpr_h__x/fields/c3__c.field-meta.xml
<CustomField>
    <fullName>c3__c</fullName>
    <description>c3</description>
    <externalDeveloperName>c3</externalDeveloperName>
    <label>c3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>