force-app/main/default/objects/msf_task_gdpr_h__x/fields/entrytype__c.field-meta.xml
<CustomField>
    <fullName>entrytype__c</fullName>
    <description>entrytype</description>
    <externalDeveloperName>entrytype</externalDeveloperName>
    <label>entrytype</label>
    <length>4</length>
    <type>Text</type>
</CustomField>