force-app/main/default/objects/msf_task_gdpr_h__x/fields/idmiembro__c.field-meta.xml
<CustomField>
    <fullName>idmiembro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>idmiembro</description>
    <externalDeveloperName>idmiembro</externalDeveloperName>
    <label>idmiembro</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GDPR &amp; Tareas</relationshipLabel>
    <relationshipName>msf_task_gdpr_h</relationshipName>
    <type>Lookup</type>
</CustomField>