force-app/main/default/objects/msf_task_gdpr_h__x/fields/msf_modificationdate_c__c.field-meta.xml
<CustomField>
    <fullName>msf_modificationdate_c__c</fullName>
    <description>msf_modificationdate__c</description>
    <externalDeveloperName>msf_modificationdate__c</externalDeveloperName>
    <label>msf_modificationdate__c</label>
    <type>DateTime</type>
</CustomField>