force-app/main/default/objects/msf_task_gdpr_h__x/fields/msf_modifications_c__c.field-meta.xml
<CustomField>
    <fullName>msf_modifications_c__c</fullName>
    <description>msf_modifications__c</description>
    <externalDeveloperName>msf_modifications__c</externalDeveloperName>
    <label>msf_modifications__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>