force-app/main/default/objects/msf_task_gdpr_h__x/fields/msf_object_c__c.field-meta.xml
<CustomField>
    <fullName>msf_object_c__c</fullName>
    <description>msf_object__c</description>
    <externalDeveloperName>msf_object__c</externalDeveloperName>
    <label>msf_object__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>